--- a/Tutorials/Tutorial4.ipynb
+++ b/Tutorials/Tutorial4.ipynb
@@ -93,7 +93,8 @@
       "850\n",
       "Opened structural inputs file data/inputsTutorial4.dat.\n",
       "Completed reading\n",
-      "Completed time integration3\n"
+      "Completed time integration             \n",
+      "The output is stored in file data/outputsTutorial4.dat\n"
      ]
     }
    ],
@@ -109,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "4a26e8d2",
+   "execution_count": 4,
+   "id": "1061fbe3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "57bcb3fb",
+   "execution_count": 5,
+   "id": "ccf6789b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "a0f544f0",
+   "execution_count": 6,
+   "id": "690c7c1a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7eff86f1f730>"
+       "<matplotlib.legend.Legend at 0x7fd368c84250>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
