we do not use Cp but pressures

--- a/Tutorials/Tutorial3.ipynb
+++ b/Tutorials/Tutorial3.ipynb
@@ -253,7 +253,7 @@
     "nTimeIter = database.X.shape[1]\n",
     "lift = []\n",
     "for i in range(nTimeIter):\n",
-    "    lift = np.append(lift, model.getCl(stateToSubract[:,i]))\n",
+    "    lift = np.append(lift, model.getLift(stateToSubract[:,i]))\n",
     "\n",
     "plt.plot(database.timeIter, lift)\n",
     "# just make the plot pretty\n",
@@ -298,7 +298,7 @@
     "    stateToSubract[:, j] = stateToSubract[:, j] + referenceSnapshotsSlope[:, 1]*database.U[1, j]\n",
     "lift = []\n",
     "for i in range(nTimeIter):\n",
-    "    lift = np.append(lift, model.getCl(stateToSubract[:,i]))\n",
+    "    lift = np.append(lift, model.getLift(stateToSubract[:,i]))\n",
     "\n",
     "plt.plot(database.timeIter, lift)\n",
     "# just make the plot pretty\n",
@@ -341,7 +341,7 @@
     "lift = []\n",
     "state = database.X - rom.Xcenter - stateToSubract\n",
     "for i in range(nTimeIter):\n",
-    "    lift = np.append(lift, model.getCl(state[:, i]))\n",
+    "    lift = np.append(lift, model.getLift(state[:, i]))\n",
     "\n",
     "plt.plot(database.timeIter, lift)\n",
     "# just make the plot pretty\n",
@@ -412,7 +412,7 @@
     "lift_ref = []\n",
     "\n",
     "for i in range(len(database.timeIter)):\n",
-    "    lift_ref = np.append(lift_ref, model.getCl(database.X[:,i]))\n",
+    "    lift_ref = np.append(lift_ref, model.getLift(database.X[:,i]))\n",
     "\n",
     "plt.plot(0.001*np.linspace(0, len(database.timeIter)-1, len(database.timeIter)), lift, '-')\n",
     "plt.plot(0.001*np.linspace(0, len(database.timeIter)-1, len(database.timeIter)), lift_ref, '--')\n",
